# chess_dagster

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  workspace.yaml
dagster/: definitions.py  pyproject.toml
dagster/assets/: dbt.py  src_chesscom_admin.py  src_chesscom_games.py  src_chesscom_player.py
dagster/assets/asset_definitions/: chess_players.yml
dagster/sensors/: src_chesscom.py
dagster/utilities/: utils.py
dagster/z_tests/: test.py
dbt/: dbt_project.yml
dbt/.dbt/: profiles.yml
dbt/macros/: dbt_custom_tests.sql  generate_landing_names.sql  utils.sql
dbt/models/chesscom/: chesscom_game_archives.sql  chesscom_game_archives.yml  chesscom_game_moves.sql  chesscom_game_moves.yml  chesscom_games.sql  chesscom_games.yml  chesscom_player_current.sql  chesscom_player_current.yml  chesscom_player_online_sessions.sql  chesscom_player_online_sessions.yml  chesscom_player_snapshot.sql  chesscom_player_snapshot.yml
dbt/models/chesscom/helpers/: h_chesscom_daily_game_moves.sql  h_chesscom_daily_game_moves.yml  h_chesscom_games_sessions.sql  h_chesscom_games_sessions.yml  h_chesscom_non_daily_game_moves.sql  h_chesscom_non_daily_game_moves.yml  h_chesscom_player_snapshot_logins.sql  h_chesscom_player_snapshot_logins.yml
dbt/models/lichess/: placeholder.txt
dbt/models/sources/: chess.yml
